syntax = "proto3";

package api.v1.app.authentication;

import "api/v1/access_control.proto";
import "api/v1/client.proto";
import "google/api/annotations.proto";

service AuthenticationService {
  rpc Logout(LogoutRequest) returns (LogoutResponse) {
    option (google.api.http) = {put: "/api/v1/app/authentication/logout"};
    option (api.v1.access_control) = {require: "session:logout"};
  }
  rpc Refresh(RefreshRequest) returns (RefreshResponse) {
    option (google.api.http) = {post: "/api/v1/app/authentication/refresh"};
    option (api.v1.access_control) = {require: "session:refresh"};
  }
  rpc TemporaryRegisterLogin(TemporaryRegisterLoginRequest) returns (TemporaryRegisterLoginResponse) {
    option (google.api.http) = {post: "/api/v1/app/authentication/temporary/register-login"};
    option (api.v1.access_control) = {};
  }
  rpc PasswordRegister(PasswordRegisterRequest) returns (PasswordRegisterResponse) {
    option (google.api.http) = {post: "/api/v1/app/authentication/password/register"};
    option (api.v1.access_control) = {};
  }
  rpc PasswordLogin(PasswordLoginRequest) returns (PasswordLoginResponse) {
    option (google.api.http) = {post: "/api/v1/app/authentication/password/login"};
    option (api.v1.access_control) = {};
  }
}

message TemporaryRegisterLoginRequest {
  api.v1.ClientType client_type = 1;
}
message TemporaryRegisterLoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}
message PasswordRegisterRequest {
  string login_id = 2;
  string password = 3;
}
message PasswordRegisterResponse {}
message PasswordLoginRequest {
  api.v1.ClientType client_type = 1;
  string login_id = 2;
  string password = 3;
}
message PasswordLoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}
message LogoutRequest {}
message LogoutResponse {}
message RefreshRequest {
  api.v1.ClientType client_type = 1;
}
message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
}
