syntax = "proto3";

package api.v1.app.user;

import "api/v1/access_control.proto";
import "google/api/annotations.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {post: "/api/v1/app/user"};
    option (api.v1.access_control) = {require: "user:create"};
  }
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {get: "/api/v1/app/user/{user_id}"};
    option (api.v1.access_control) = {require: "user:get"};
  }
  rpc AddUserAuthentication(RegisterUserAuthenticationRequest) returns (RegisterUserAuthenticationResponse) {
    option (google.api.http) = {put: "/api/v1/app/user/{user_id}/authentication"};
    option (api.v1.access_control) = {require: "user:add-authentication"};
  }
  rpc RemoveUserAuthentication(RegisterUserAuthenticationRequest) returns (RegisterUserAuthenticationResponse) {
    option (google.api.http) = {put: "/api/v1/app/user/{user_id}/authentication"};
    option (api.v1.access_control) = {require: "user:remove-authentication"};
  }
}

message CreateUserRequest {
  string display_name = 1;
}
message CreateUserResponse {
  string user_id = 1;
  string display_name = 2;
}
message GetUserRequest {
  string user_id = 1;
}
message GetUserResponse {
  string user_id = 1;
  string display_name = 2;
}
message RegisterUserAuthenticationRequest {
  string user_id = 1;
  string authentication_id = 2;
}
message RegisterUserAuthenticationResponse {}
